# az-spot-orchestrator

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  INFRA.md  Makefile  OIDC.md  README.md  config.py  docker-compose.yml  filebeat.yml  logging_config.py  main.py  pyproject.toml  requirements.txt  test_api.py  test_llm.py  worker.py
.github/workflows/: README.md  cd.yml  ci.yml
api/: deps.py
api/routes/: images.py  inventory.py  messages.py  models.py  proxy.py  storage.py
cloud_init/: vm_setup.py
db/: cosmos.py  models.py  session.py
docs/: architecture.md  elk-monitoring.md
schemas/: api.py
scripts/: check_gpu_availability.py  setup-env.sh  start-dev.sh  test_files_pipeline.py
services/: azure_client.py  blob_client.py  files_cache.py  files_client.py  model_cache.py
static/: dashboard.html
temporal/: types.py
temporal/activities/: azure.py  blob.py  database.py  files.py  seed_blob.py
temporal/workflows/: blob_copy.py  create_files_share.py  seed_blob.py  seed_files.py  vm_provisioning.py
terraform/: .terraform.lock.hcl  github_oidc.tf  init-backend.sh  main.tf  outputs.tf  tfplan  variables.tf
