[project]
name = "az-spot-orchestrator"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "aiohttp>=3.9.0",
    "azure-core>=1.30.0",
    "azure-cosmos>=4.7.0",
    "azure-identity>=1.15.0",
    "azure-mgmt-compute>=30.0.0",
    "azure-mgmt-network>=25.0.0",
    "fastapi>=0.110.0",
    "httpx>=0.26.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "rich>=15.0.0",
    "temporalio>=1.3.0",
    "uvicorn[standard]>=0.27.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100
exclude = [".venv", "terraform"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]  # line length handled by formatter

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
exclude = ["^\\.venv/", "^terraform/", "^test_"]
